--- a/javascriptv3/example_code/eventbridge/package.json
+++ b/javascriptv3/example_code/eventbridge/package.json
@@ -7,7 +7,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-eventbridge": "^3.421.0"
   },
   "devDependencies": {
