--- a/javascriptv3/example_code/lambda/package.json
+++ b/javascriptv3/example_code/lambda/package.json
@@ -11,7 +11,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-lambda": "^3.163.0",
     "libs": "*"
   },
