--- a/javascriptv3/example_code/cloudwatch-events/package.json
+++ b/javascriptv3/example_code/cloudwatch-events/package.json
@@ -4,7 +4,7 @@
   "author": "Corey Pyle <corepyle@amazon.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-cloudwatch-events": "^3.229.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.229.0",
     "@aws-sdk/client-lambda": "^3.229.0"
