--- a/javascriptv3/example_code/cloudwatch-logs/package.json
+++ b/javascriptv3/example_code/cloudwatch-logs/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "type": "module",
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-cloudwatch-logs": "^3.215.0",
     "@aws-sdk/client-iam": "^3.216.0",
     "@aws-sdk/client-lambda": "^3.216.0"
