--- a/javascriptv3/example_code/cloudwatch/package.json
+++ b/javascriptv3/example_code/cloudwatch/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "type": "module",
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-cloudwatch": "^3.212.0",
     "@aws-sdk/client-ec2": "^3.213.0"
   },
