--- a/javascriptv3/example_code/codebuild/package.json
+++ b/javascriptv3/example_code/codebuild/package.json
@@ -4,7 +4,7 @@
   "author": "Corey Pyle <corepyle@amazon.com>",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-codebuild": "^3.391.0"
   },
   "type": "module",
