--- a/javascriptv3/example_code/dynamodb/package.json
+++ b/javascriptv3/example_code/dynamodb/package.json
@@ -8,7 +8,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-dynamodb": "^3.210.0",
     "@aws-sdk/lib-dynamodb": "^3.210.0",
     "libs": "*"
