--- a/javascriptv3/example_code/glue/package.json
+++ b/javascriptv3/example_code/glue/package.json
@@ -10,7 +10,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-glue": "^3.425.0",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
