--- a/javascriptv3/example_code/iam/package.json
+++ b/javascriptv3/example_code/iam/package.json
@@ -8,7 +8,7 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-iam": "^3.303.0",
     "@aws-sdk/client-s3": "^3.303.0",
     "@aws-sdk/client-sts": "^3.303.0"
