--- a/javascriptv3/example_code/medical-imaging/package.json
+++ b/javascriptv3/example_code/medical-imaging/package.json
@@ -4,7 +4,7 @@
   "author": "Steven Meyer <meyertst@amazon.com",
   "license": "Apache-2.0",
   "dependencies": {
-    "@aws-sdk-examples/libs": "^1.0.0",
+    "@aws-doc-sdk-examples/lib": "^1.0.0",
     "@aws-sdk/client-medical-imaging": "^3.391.0"
   },
   "scripts": {
