--- a/javascriptv3/example_code/cross-services/photo-analyzer-ppe/package.json
+++ b/javascriptv3/example_code/cross-services/photo-analyzer-ppe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-sdk-v3-ppe-examples",
+  "name": "@aws-doc-sdk-examples/aws-sdk-v3-ppe-examples",
   "version": "1.0.0",
   "repository": "git@github.com/awsdocs/aws-doc-sdk-examples/tree/master/javascriptv3/example_code/ppe.git",
   "author": "Brian Murray <brmur@amazon.com>",
