--- a/javascriptv3/example_code/cross-services/photo-asset-manager/package.json
+++ b/javascriptv3/example_code/cross-services/photo-asset-manager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-javascriptv3-pam",
+  "name": "@aws-doc-sdk-examples/example-javascriptv3-pam",
   "version": "1.0.0",
   "description": "Companion Lambda functions for the Photo Asset Manager example.",
   "type": "module",
