--- a/javascriptv3/example_code/cross-services/textract-react/package.json
+++ b/javascriptv3/example_code/cross-services/textract-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "textract",
+  "name": "@aws-doc-sdk-examples/textract",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
