--- a/javascriptv3/example_code/cross-services/transcribe-streaming-app/package.json
+++ b/javascriptv3/example_code/cross-services/transcribe-streaming-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "transcribe-steaming-example",
+  "name": "@aws-doc-sdk-examples/transcribe-steaming-example",
   "version": "1.0.0",
   "description": "Using the AWS SDK for JavaScript V3 to .",
   "main": "index.js",
