--- a/javascriptv3/example_code/glue/package.json
+++ b/javascriptv3/example_code/glue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "glue",
+  "name": "@aws-doc-sdk-examples/glue",
   "version": "1.0.0",
   "description": "AWS SDK for JavaScript (v3) examples for AWS Glue",
   "type": "module",
