--- a/javascriptv3/example_code/web/s3/list-objects/package.json
+++ b/javascriptv3/example_code/web/s3/list-objects/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "list-objects",
+  "name": "@aws-doc-sdk-examples/list-objects",
   "private": true,
   "version": "0.0.0",
   "type": "module",
