--- a/javascriptv3/example_code/cross-services/feedback-sentiment-analyzer/SynthesizeAudio/package.json
+++ b/javascriptv3/example_code/cross-services/feedback-sentiment-analyzer/SynthesizeAudio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-javascriptv3-fsa-synthesize-audio",
+  "name": "@aws-doc-sdk-examples/example-javascriptv3-fsa-synthesize-audio",
   "version": "1.0.0",
   "description": "Companion AWS Lambda functions for the Feedback Sentiment Analyzer Example.",
   "main": "index.js",
