--- a/javascriptv3/example_code/cross-services/photo_analyzer/package.json
+++ b/javascriptv3/example_code/cross-services/photo_analyzer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-sdk-v3-cross-service-examples-photo-analyzer",
+  "name": "@aws-doc-sdk-examples/aws-sdk-v3-cross-service-examples-photo-analyzer",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com/awsdocs/aws-doc-sdk-examples/tree/master/javascriptv3/example_code/cross-services/photo-analyzer.git",
