--- a/javascriptv3/example_code/cross-services/wkflw-topics-queues/package.json
+++ b/javascriptv3/example_code/cross-services/wkflw-topics-queues/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-javascriptv3-wkflw-topicsandqueues",
+  "name": "@aws-doc-sdk-examples/example-javascriptv3-wkflw-topicsandqueues",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
