--- a/javascriptv3/example_code/kinesis/package.json
+++ b/javascriptv3/example_code/kinesis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-sdk-v3-kinesis-examples",
+  "name": "@aws-doc-sdk-examples/aws-sdk-v3-kinesis-examples",
   "version": "1.0.0",
   "main": "kinesis-example.js",
   "scripts": {
