--- a/javascriptv3/example_code/medical-imaging/package.json
+++ b/javascriptv3/example_code/medical-imaging/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-javascriptv3-medical-imaging",
+  "name": "@aws-doc-sdk-examples/example-javascriptv3-medical-imaging",
   "version": "1.0.0",
   "author": "Steven Meyer <meyertst@amazon.com",
   "license": "Apache-2.0",
