--- a/javascriptv3/example_code/polly/package.json
+++ b/javascriptv3/example_code/polly/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-sdk-v3-polly-example",
+  "name": "@aws-doc-sdk-examples/aws-sdk-v3-polly-example",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "git@github.com/awsdocs/aws-doc-sdk-examples/tree/master/javascriptv3/example_code/polly.git",
