--- a/javascriptv3/example_code/s3/package.json
+++ b/javascriptv3/example_code/s3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-javascriptv3-s3",
+  "name": "@aws-doc-sdk-examples/example-javascriptv3-s3",
   "version": "1.0.0",
   "description": "Examples demonstrating how to use the AWS SDK for JavaScript (v3) to interact with Amazon S3.",
   "scripts": {
