--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@ rust_dev_preview
 .vectors
 # .snippets are created temporarily as build artifacts
 .snippets
+.scouts
+
 # Ignore build-related files and directories in kotlin/services/
 kotlin/services/**/build/
 kotlin/services/**/gradle/
