--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -34,3 +34,6 @@ jobs:
           changed_files=(${{steps.changed-files.outputs.all_changed_files}})
           npm run --prefix javascriptv3 ci-lint -- ${changed_files[@]//javascriptv3\/}
         name: Lint added and modified files
+      - run: ./javascriptv3/github_scripts/validate_packages.sh 
+        name: Validate package names
+
