--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -124,6 +124,70 @@ bedrock-runtime_InvokeStableDiffusionForImageGeneration:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeMistral7B:
+  title: Invoke the Mistral 7B model on &BR; for text generation
+  title_abbrev: Text generation with Mistral 7B
+  synopsis: invoke the Mistral 7B model model on &BR; for text generation.
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mistral 7B foundation model to generate text.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_mistral_7b.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mistral 7B foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/actions/invoke-mistral-7b.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mistral 7B foundation model to generate text.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeMistral7B
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_InvokeMixtral8x7B:
+  title: Invoke the Mixtral 8x7B model on &BR; for text generation
+  title_abbrev: Text generation with Mixtral 8x7B
+  synopsis: invoke the Mixtral 8x7B model model on &BR; for text generation.
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mixtral 8x7B foundation model to generate text.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_mixtral_8x7b.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mixtral 8x7B foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/actions/invoke-mixtral-8x7b.js
+    Python:
+      versions:
+        - sdk_version: 3
+          github: python/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Mixtral 8x7B foundation model to generate text.
+              snippet_tags:
+                - python.example_code.bedrock-runtime.InvokeMixtral8x7B
+  services:
+    bedrock-runtime: {InvokeModel}
+
 bedrock-runtime_InvokeClaude:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation
   title_abbrev: Text generation with Anthropic Claude 2
