Updates to tests.

--- a/dotnetv3/S3/scenarios/S3ObjectLockScenario/ObjectLockTests/S3ObjectLockTests.csproj
+++ b/dotnetv3/S3/scenarios/S3ObjectLockScenario/ObjectLockTests/S3ObjectLockTests.csproj
@@ -37,4 +37,10 @@
 		</Content>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Content Update="testsettings.local.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
 </Project>
