--- a/dotnetv3/S3/scenarios/S3ObjectLockScenario/ObjectLockTests/testsettings.json
+++ b/dotnetv3/S3/scenarios/S3ObjectLockScenario/ObjectLockTests/testsettings.json
@@ -1,4 +1,4 @@
 {
-  "resourcePrefix": "dotnet-s3-lock-example",
+  "resourcePrefix": "dotnet-s3-lock-example-test",
   "exampleFileName": "dotnet-example-file.txt"
 }
